--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,3 +32,11 @@ button:hover {
     background: yellow;
 }
 
+.image-view {
+        align-items: flex-start;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        max-width: 94vw;
+    }
+
