--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,10 +33,8 @@ button:hover {
 }
 
 .image-view {
-        align-items: flex-start;
-        display: flex;
+        display: inline;
         flex-wrap: wrap;
-        justify-content: space-around;
-        max-width: 94vw;
     }
+
 
